--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -5,7 +5,7 @@
    "id": "878ee503",
    "metadata": {},
    "source": [
-    "MNSIT Project from Scratch"
+    "MNIST Project from Scratch"
    ]
   },
   {
